<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="30dp"
    tools:context=".Registro">



    <androidx.appcompat.widget.LinearLayoutCompat
        android:padding="10dp"
        android:id="@+id/avMainCarga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIndicacionRegistro"
        app:layout_constraintVertical_chainStyle="packed">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30sp"
            android:text="Sing Up"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false">

            <EditText
                style="@style/LoginTextInputLayoutStyle"
                android:id="@+id/etNombreRegistro"
                android:background="@color/fondoInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/user_white"
                android:drawablePadding="12dp"
                android:hint="@string/nombreEt"
                android:inputType="textPersonName|textCapWords"
                android:padding="20dp"
                app:boxStrokeColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false">

            <EditText
                style="@style/LoginTextInputLayoutStyle"
                android:id="@+id/etNombreEmail"
                android:background="@color/fondoInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/email"
                android:drawablePadding="12dp"
                android:hint="@string/correoEt"
                android:inputType="textEmailAddress|textCapWords"
                android:padding="20dp" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:passwordToggleEnabled="true"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:passwordToggleTint="@color/white">

            <EditText
                style="@style/LoginTextInputLayoutStyle"
                android:id="@+id/etNombrePassword"
                android:background="@color/fondoInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/password_white"
                android:drawablePadding="12dp"
                android:hint="@string/contraseñaEt"
                android:inputType="textPassword"
                android:padding="20dp" />

        </com.google.android.material.textfield.TextInputLayout>



    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegistroUsuario"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="180dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:text="@string/registrarUsuario"
        app:layout_constraintBottom_toTopOf="@+id/tvRegistroCuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avMainCarga"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvRegistroCuenta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:gravity="center"
        android:text="@string/Tengo_una_cuenta"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>