<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Registro"
    android:padding="30dp">


    <TextView
        android:id="@+id/tvIndicacionRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/iniciarSesion"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_regsitro"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/avMainCarga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIndicacionRegistro"
        app:layout_constraintVertical_chainStyle="packed">

        <!--<com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="iniciar_sesion.json"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_loop="true" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/etNombreEmail"
                style="@style/LoginTextInputLayoutStyle"
                android:background="@color/fondoInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/user_white"
                android:drawablePadding="12dp"
                android:hint="@string/correoEt"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:hintEnabled="false"
            app:hintAnimationEnabled="false"
            app:passwordToggleEnabled="true"
            style="@style/LoginTextInputLayoutStyle"
            app:passwordToggleTint="@color/white">

            <EditText
                style="@style/LoginTextInputLayoutStyle"
                android:background="@color/fondoInput"
                android:textColorHint="@color/white"
                android:id="@+id/etNombrePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/password_white"
                android:drawablePadding="12dp"
                android:hint="@string/contraseñaEt"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegistroUsuario"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:text="Entrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avMainCarga" />

    <TextView
        android:id="@+id/tvLoginRegisto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistroUsuario"
        app:layout_constraintVertical_bias="0.893" />


</androidx.constraintlayout.widget.ConstraintLayout>